--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "webpack --mode=production --node-env=production",
     "watch": "webpack --mode=development --node-env=development --watch",
     "start": "webpack serve --mode=development --node-env=development --open",
+    "lint": "eslint ./src",
     "test": "jest"
   },
   "author": "",
