--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,8 @@ name: Front-end build
 on:
   pull_request:
     branches: [ "main", "development" ]
+  push:
+    branches: [ "main", "development" ]
 
 jobs:
   build:
